log
Mon 27 May 2024 03:07:07 AM UTC: 
 tests:  0|5
total_score: 0/70
2eff996
Mon 27 May 2024 03:23:07 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:22: error: comparison between pointer and integer [-Werror]
   47 |    for(int* i = 0; i < 10; i++)
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
e065c99
